syntax = "proto3";
option csharp_namespace = "GRPC_SaleStoreClient";

package saleStoreDTO;

service SaleStoreDTO {
  rpc CreateSaleStore(CreateSaleStoreDTOLookUpModel) returns (CreateSaleStoreDTOModel);
  rpc UpdateSaleStore(UpdateSaleStoreDTOLookUpModel) returns (UpdateSaleStoreDTOModel);
}

// Requesta
message CreateSaleStoreDTOLookUpModel {
  int32 StoreId = 1;
}

// Response
message CreateSaleStoreDTOModel {
	int32 SaleId = 1;
}

// Request
message UpdateSaleStoreDTOLookUpModel {
  int32 SaleId = 1;
  repeated ProductStoreDTOLookUpModel ProductStoreDTOLookUpModel = 2;
}

// Response
message UpdateSaleStoreDTOModel {
	int32 SaleId = 1;
	repeated ProductStoreDTOModel ProductStoreDTOModel = 2;
	double SalePriceTotal = 3;
}


/*message ProductSaleStoreDTOModel {
	int32 Id = 1;
	ProductStoreDTOModel ProductStoreDTOModel = 2;
	double salePrice = 3;
}*/

message ProductStoreDTOLookUpModel {
	int32 Id = 1;
}

message ProductStoreDTOModel {
	int32 Id = 1;
	int32 Barcode = 2;
	double PurchasePrice = 3;
	string Name = 4;
	double SalePrice = 5;
}