syntax = "proto3";

option csharp_namespace = "GRPC_Client";

package productDTO;

service ProductDTO {
  rpc GetProductDTOInfo(ProductDTOLookUpModel) returns (ProductDTOModel);
}

// Request
message ProductDTOLookUpModel {
  int32 Barcode = 1;
  int32 StoreId = 2;
}

// Response
message ProductDTOModel {
	int32 Id = 1;
	int32 Barcode = 2;
	double SellingPrice = 3;
	string Name = 4;
	double SalePrice = 5;
}
